# goofus-gagger

./: Cargo.toml  README.md  config.json  state.json
src/: commands.rs  gag.rs  main.rs  types.rs  util.rs
src/commands/: change_gag.rs  data.rs  export.rs  gag.rs  gag_default.rs  let_me_out.rs  safety.rs  safeword.rs  status.rs  struggle.rs  tie.rs  trust.rs
src/types/: config.rs  gag.rs  gaggee.rs  member_id.rs  portable.rs  rewriter.rs  safeword.rs  state.rs  trust.rs
