[package]
name = "goofus-gagger"
description = "Discord bot for gagging with state of the art consent modeling."
license = "AGPL-3.0-or-later"
repository = "https://github.com/Scripter17/goofus-gagger"
readme = "README.md"
keywords = ["discord", "bot"]
categories = []
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
poise = "0.6.1"
rand = "0.9.0"
serde = "1.0.217"
serde_json = "1.0.138"
serenity = "0.12.4"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }

[lints.clippy]
cargo_common_metadata = "warn"
unwrap_used = "warn"
