[package]
name = "goofus-gagger"
description = "Discord bot for gagging with state of the art consent modeling."
license = "AGPL-3.0-or-later"
repository = "https://github.com/Scripter17/goofus-gagger"
readme = "README.md"
keywords = ["discord", "bot"]
categories = []
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.46", features = ["derive"] }
poise = "0.6.1"
rand = "0.9.2"
regex = "1.11.2"
serde = "1.0.219"
serde_json = "1.0.143"
serenity = "0.12.4"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }

[lints.clippy]
unwrap_used = "deny"
missing_errors_doc = "deny"
missing_panics_doc = "deny"
missing_safety_doc = "deny"
perf = { level = "warn", priority = -1 }
arithmetic_side_effects = "warn"
cargo_common_metadata = "warn"
todo = "warn"
enum_variant_names = "allow"
missing_docs_in_private_items = "warn"
allow_attributes_without_reason = "warn"
dbg_macro = "warn"
# indexing_slicing = "deny"
unit_arg = "allow"
match_like_matches_macro = "allow"
module_inception = "allow"

too_many_arguments = "allow"
